crates/core-executor/src/tests/sql/commands/snapshots/rlike_regexp/query_rlike_regexp_embedded_backslashes.snap
---
source: crates/core-executor/src/tests/sql/commands/rlike_regexp.rs
description: "r\"SELECT v, v REGEXP '.*\\\\s\\\\\\\\.*' AS matches\n  FROM strings\n  ORDER BY v\""
info: "Setup queries: CREATE OR REPLACE TABLE strings (v VARCHAR(50))\nAS SELECT * FROM VALUES\n  ('San Francisco'),\n  ('San Jose'),\n  ('Santa Clara'),\n  ('Sacramento'),\n  ('Contains embedded single \\\\\\\\backslash')"
---
Ok(
    [
        "+-------------------------------------+---------+",
        "| v                                   | matches |",
        "+-------------------------------------+---------+",
        "| Contains embedded single \\backslash | true    |",
        "| Sacramento                          | false   |",
        "| San Francisco                       | false   |",
        "| San Jose                            | false   |",
        "| Santa Clara                         | false   |",
        "+-------------------------------------+---------+",
    ],
)
